<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="10px"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView
		android:id= "@+id/title_act2"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/in_adresse_dest"
	    android:paddingBottom="40px"
	    android:paddingTop="30px"
	    android:textSize="20sp">
	</TextView>
	<EditText
		android:id= "@+id/getAddress"
		android:layout_marginBottom="40px"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:hint="@string/in_address">
	</EditText>
	<Button android:id= "@+id/bCheck"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:textStyle="bold"
		android:text="@string/b_check"
		android:textColor="#000000"
		android:layout_below="@+id/texteRayon"
		android:height="40pt"
		android:layout_gravity="center_horizontal">
	</Button>

</LinearLayout>
