<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="10px"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/t_search_menu"
	    android:textSize="28sp"
	    android:paddingBottom="40px"
	    android:paddingTop="10px"
	    android:gravity="top|center_horizontal">
	</TextView>
	<Button android:id= "@+id/b3"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:textStyle="bold"
	android:text="@string/b_from_position"
	android:textColor="#000000"
	android:layout_below="@+id/texteRayon"
	
	android:layout_margin="20px"
	android:height="40pt">
	</Button>
	<Button android:id= "@+id/b4"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:textStyle="bold"
	android:text="@string/b_from_dest"
	android:textColor="#000000"
	android:layout_below="@+id/texteRayon"
	
	android:layout_margin="20px"
	android:height="40pt">
	</Button>

</LinearLayout>
