<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10px"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView
		android:id= "@+id/gps"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/gps_oui_non"
	    android:textSize="28sp"
	    android:paddingBottom="40px"
	    android:paddingTop="10px"
	    android:gravity="top|center_horizontal">
	</TextView>
	<Button android:id= "@+id/b_oui"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:textStyle="bold"
	android:text="@string/oui"
	android:textColor="#000000"
	android:layout_below="@+id/texteRayon"
	android:layout_margin="20px"
	android:height="40pt">
	</Button>
	<Button android:id= "@+id/b_non"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:textStyle="bold"
	android:text="@string/non"
	android:textColor="#000000"
	android:layout_below="@+id/texteRayon"
	android:layout_margin="20px"
	android:height="40pt">
	</Button>
</LinearLayout>